--- a/pages/main.html
+++ b/pages/main.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Inventions</title>
-        <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
-    <body>
-        <header><h1>Inventors and their inventions</h1></header>
-        <nav class="navbar navbar-light">
-            <a class="nav-link" href="./main.html">Main</a>
-            <a class="nav-link" href="./inventors.html">Inventors</a>
-            <a class="nav-link" href="./inventions.html.html">Inventions</a>
-            <a class="nav-link" href="./gallery.html.html">Gallery</a>
-        </nav>
-        <p>This website is about:</p>
+
+<head>
+    <title>Main</title>
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <link rel="stylesheet" href="../stylesheets/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+
+<body>
+    <h1 id="header">inventors <span>and their</span> inventions </h1>
+
+    <div class="row no-gutters">
+        <a class="col-12 col-sm-3 col-md-3 col-lg-3 nav-link current-page" href="./main.html">Main</a>
+        <a class="col-12 col-sm-3 col-md-3 col-lg-3 nav-link" href="./inventors.html">Inventors</a>
+        <a class="col-12 col-sm-3 col-md-3 col-lg-3 nav-link" href="./inventions.html">Inventions</a>
+        <a class="col-12 col-sm-3 col-md-3 col-lg-3 nav-link" href="./youroffer.html">your invention</a>
+    </div>
+    <div class="container">
+        <p class="main-page-p">This website is about:</p>
         <ul>
-            <li>people who invented something revolutional</li>
+            <li>people who invented something revolutional</li> 
             <li>first models of inventions</li>
             <li>photos of the first models of inventions</li>
-        </ul>
-
-    </body>
+        </ul>    
+    </div>
+    <div class="container">
+        <p class="main-page-p">You can also help us to extend our list by providing inforamtion about you and your creation,
+            or about a person or people who changed this world.</p><a href="./youroffer.html">Tell us now!</a>
+    </div>
+</body>
+ 
 </html>
